--- a/20210322_Dearmesoon/index.html
+++ b/20210322_Dearmesoon/index.html
@@ -161,13 +161,13 @@
         <div class="f-mon scroll-text-top">
             Campaign
         </div>
-        <div class="slide-area">
+        <div class="slide-area" data-aos="fade-up" data-aos-duration="700" data-aos-delay="100">
             <div class="title-area">
-                <h2 class="dear-title" data-aos="fade-up" data-aos-duration="700" data-aos-delay="100">
+                <h2 class="dear-title">
                     <span>Campaign</span>
                     디어미순<br>캠페인
                 </h2>
-                <a href="#" class="btn-view-more f-mon" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">VIEW MORE</a>
+                <a href="#" class="btn-view-more f-mon">VIEW MORE</a>
             </div>
             <div class="campaign-slide">
                 <div class="slide-wrap">
