--- a/20210322_Dearmesoon/sub_html/sub02_02_05.html
+++ b/20210322_Dearmesoon/sub_html/sub02_02_05.html
@@ -114,7 +114,7 @@
             <div class="precautions bg-gray">
                 <div class="inner">
                     <div class="case-box">
-                        <h3>1정 이상의 <span class="point">흰색약 복용을 잊은 경우</span>한 경우</h3>
+                        <h3>1정 이상의 <span class="point">흰색약 복용을 잊은 경우</span></h3>
                         <p>흰색 정제 복용을 한 개 또는 여러개의 복용을 잊은 경우는, 진행 중인 팩의 마지막 노란색 정제 복용시점과<br>
                             다음 팩의 첫 번째 노란색 정제 복용 간격이 4일을 초과하지 않는다면 아무런 영향을 초래하지 않는다.</p>
                         <img src="../img/img_case03.svg">
