--- a/sub_html/sub02_02_05.html
+++ b/sub_html/sub02_02_05.html
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="sub02_02_01.html" class="btn-black-line">다시 확인하기</button>
+                <a href="sub02_02_01.html" class="btn-black-line">다시 확인하기</a>
                 <a href="#caution-area" class="precautions-text text-point">아래 주의사항을 반드시 확인해주세요</a>
             </div>
             <div class="precautions bg-gray" id="caution-area">
